GPC/tests/examples/fail/duplicateArgNames.gpc


int duplicateArgNames(int a, int a) {
    return 1;
}
